[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scenes/Admin_creator/AdminPin.gd" type="Script" id=1]

[node name="AdminPin" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
script = ExtResource( 1 )

[node name="WindowDialog" type="WindowDialog" parent="."]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -85.0975
margin_top = -96.5
margin_right = 86.9025
margin_bottom = 96.5
window_title = "Create Admin Pin"

[node name="MarginContainer" type="MarginContainer" parent="WindowDialog"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 5.0
margin_top = 5.0
margin_right = -5.0
margin_bottom = -5.0

[node name="VBoxContainer" type="VBoxContainer" parent="WindowDialog/MarginContainer"]
margin_left = 30.0
margin_right = 132.0
margin_bottom = 183.0
size_flags_horizontal = 4
size_flags_vertical = 5

[node name="Label" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_top = 2.0
margin_right = 102.0
margin_bottom = 33.0
size_flags_vertical = 6
text = "Please input an 
Admin Pin"
align = 1
valign = 1

[node name="LinePinOne" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 22.0
margin_top = 39.0
margin_right = 80.0
margin_bottom = 63.0
hint_tooltip = "Pin must be 4 characters in length and be only numbers. "
size_flags_horizontal = 6
size_flags_vertical = 0
align = 1
max_length = 4
secret = true
clear_button_enabled = true
placeholder_text = "****"

[node name="Label2" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_top = 88.0
margin_right = 102.0
margin_bottom = 102.0
size_flags_vertical = 10
text = "Confirm Pin"
align = 1
valign = 1

[node name="LinePinTwo" type="LineEdit" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 22.0
margin_top = 106.0
margin_right = 80.0
margin_bottom = 130.0
hint_tooltip = "Pin must be 4 characters in length and be only numbers. "
size_flags_horizontal = 6
size_flags_vertical = 2
align = 1
max_length = 4
secret = true
clear_button_enabled = true
placeholder_text = "****"

[node name="Label3" type="Label" parent="WindowDialog/MarginContainer/VBoxContainer"]
visible = false
margin_top = 133.0
margin_right = 102.0
margin_bottom = 147.0
text = "pin mismatch"
align = 1
valign = 1
uppercase = true

[node name="Button" type="Button" parent="WindowDialog/MarginContainer/VBoxContainer"]
margin_left = 13.0
margin_top = 149.0
margin_right = 88.0
margin_bottom = 179.0
rect_min_size = Vector2( 75, 30 )
size_flags_horizontal = 4
size_flags_vertical = 6
disabled = true
text = "Confirm"
[connection signal="text_changed" from="WindowDialog/MarginContainer/VBoxContainer/LinePinOne" to="." method="_on_LinePinOne_text_changed"]
[connection signal="text_changed" from="WindowDialog/MarginContainer/VBoxContainer/LinePinTwo" to="." method="_on_LinePinTwo_text_changed"]
[connection signal="pressed" from="WindowDialog/MarginContainer/VBoxContainer/Button" to="." method="_on_Button_pressed"]
